# TRACE-AI-FR

./: ARCHITECTURE.md  BUILD_SUCCESS.md  HOW_TO_RUN.docx  HOW_TO_RUN.md  HOW_TO_RUN_LOCALLY.docx  HOW_TO_RUN_LOCALLY.md  HOW_TO_RUN_ONE_PAGE.docx  INPUT_FIELDS_SELF_HELP_GUIDE.docx  INPUT_FIELDS_SELF_HELP_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.docx  README.md  TRACE-AI-FR.spec  build_exe.ps1  create_demo.py  cspell.json  demo_enhanced_features.py  desktop_app.py  e01_run_log.txt  pyproject.toml  requirements.txt  run_log.txt  show_results.py  test_new_platforms.py  test_platform_detection.py  verify_build.py
ai_usage_evidence_analyzer/: __init__.py  __main__.py  acquisition_bridge.py  adjudication.py  capability_registry.py  carving.py  caveats.py  claim_ladder.py  cli.py  confidence.py  correlation.py  docx_parser.py  docx_report.py  e01_handler.py  engine.py  evidence_exhibit.py  forensic_checklist.py  fr_assessment.py  governance.py  llm_narrator.py  matrix.py  models.py  models.py.bak  parser_registry.py  partition_analysis.py  persistence.py  raw_inspector.py  recovery.py  repo_reality_check.py  report_generator.py  signatures.py  storage.py  tool_registry.py  ui_checklist.py  validation.py  voice_evidence.py
config/: ai_tool_inventory.yaml
demo_output/: 3B13B281_findings.json  3B13B281_findings.sqlite  3B13B281_governance_record.json  3B13B281_report.html  3B13B281_report.md  6080C444_findings.json  6080C444_findings.sqlite  6080C444_governance_record.json  6080C444_report.html  6080C444_report.md  AC2A3DB3_findings.json  AC2A3DB3_findings.sqlite  (+3 more)
(+51 files in other folders)
